#197: Converted GetEntityTypes UC to BasePaginatedMultipleEntitiesCommand